--- a/404.html
+++ b/404.html
@@ -2,6 +2,20 @@
 <html lang="en">
   <head>
     <title>404 - Collin 3D Models</title>
+
+
+    <link rel="canonical" href="https://www.collin3dmodels.com/404"/>
+    <meta property="og:image" content="/images/32x32/13761971/C3MNewLohoPride.png"/>
+    <meta property="og:image:width" content="2500"/>
+    <meta property="og:image:height" content="1330"/>
+    <meta property="og:url" content="https://www.collin3dmodels.com"/>
+    <meta property="og:site_name" content="Collin 3D Models"/>
+    <link rel="alternate" href="https://www.collin3dmodels.com" hreflang="x-default"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="404 - Collin 3D Models"/>
+    <meta name="twitter:image" content="/images/32x32/13761971/C3MNewLohoPride.png"/>
+
+
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta
       property="og:description"
@@ -12,11 +26,11 @@
     <meta property="og:locale" content="en" />
     <meta
       property="og:url"
-      content="https://clonndev.starlightcommunity.net/404"
+      content="https://www.collin3dmodels.com/404"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#d35e56" />
-    <meta http-equiv="Refresh" content="15; url='https://collin3dmodels.com'" />
+    <meta http-equiv="Refresh" content="15; url='https://www.collin3dmodels.com'" />
     <link
       rel="icon"
       type="image/png"
@@ -54,7 +68,6 @@
       href="/css/custom.250201041739.css"
       id="customcss"
     />
-    <link rel="canonical" href="https://clonndev.starlightcommunity.net/404" />
     <script>
       if (!webcard) var webcard={};webcard.id=1328317;webcard.moduleId=11109783;webcard.culture="en";webcard.type=2;webcard.isEdit=false;webcard.isPreview=true;webcard.isMobile=/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent);webcard.isTouch='ontouchstart' in window || navigator.msMaxTouchPoints > 0;webcard.googleMapsEmbedApiKey='AIzaSyDoOLq_ts27g3vEog9sGYB0GJSyWBDK9gs';webcard.googleMapsApiKey='';webcard.apiHost=location.host + '/api.php';var extraPath='';
     </script>
