--- a/downloads.html
+++ b/downloads.html
@@ -4,12 +4,23 @@
     <title>Downloads - Collin 3D Models</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
+    <meta property="og:image" content="/images/32x32/13761971/C3MNewLohoPride.png"/>
+    <meta property="og:image:width" content="2500"/>
+    <meta property="og:image:height" content="1330"/>
+    <meta property="og:url" content="https://www.collin3dmodels.com"/>
+    <meta property="og:site_name" content="Collin 3D Models"/>
+    <link rel="alternate" href="https://www.collin3dmodels.com" hreflang="x-default"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="Downloads - Collin 3D Models"/>
+    <meta name="twitter:image" content="/images/32x32/13761971/C3MNewLohoPride.png"/>
+
+
     <meta property="og:title" content="Downloads - Collin 3D Models" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en" />
     <meta
       property="og:url"
-      content="https://clonndev.starlightcommunity.net/downloads"
+      content="https://www.collin3dmodels.com/downloads"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#d35e56" />
@@ -52,7 +63,7 @@
     />
     <link
       rel="canonical"
-      href="https://clonndev.starlightcommunity.net/downloads"
+      href="https://www.collin3dmodels.com/downloads"
     />
     <script>
       if (!webcard) var webcard={};webcard.id=1328317;webcard.moduleId=11109774;webcard.culture="en";webcard.type=2;webcard.isEdit=false;webcard.isPreview=true;webcard.isMobile=/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent);webcard.isTouch='ontouchstart' in window || navigator.msMaxTouchPoints > 0;webcard.googleMapsEmbedApiKey='AIzaSyDoOLq_ts27g3vEog9sGYB0GJSyWBDK9gs';webcard.googleMapsApiKey='';webcard.apiHost=location.host + '/api.php';var extraPath='';
@@ -121,7 +132,9 @@
           <div class="inner">
             <div class="ed-element ed-icon social-icons-icon" id="ed-564173616">
               <a
-                href="https://www.youtube.com/@clonn."
+                href="https://www.youtube.com/@clonn."                
+                target="_blank"
+                title="My Youtube"
                 rel="nofollow"
                 ><svg
                   xmlns="http://www.w3.org/2000/svg"
