--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
       content="Hi, I&#039;m Clonn, I am a person with a large set of skills."
     />
 
+    <meta property="og:image" content="/images/32x32/13761971/C3MNewLohoPride.png"/>
+    <meta property="og:image:width" content="2500"/>
+    <meta property="og:image:height" content="1330"/>
+    <meta property="og:url" content="https://www.collin3dmodels.com"/>
+    <meta property="og:site_name" content="Collin 3D Models"/>
+    <link rel="alternate" href="https://www.collin3dmodels.com" hreflang="x-default"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="Collin 3D Models - 3D Modeler"/>
+    <meta name="twitter:image" content="/images/32x32/13761971/C3MNewLohoPride.png"/>
+
     <meta property="og:title" content="Collin 3D Models - 3D Modeler" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en" />
-    <meta property="og:url" content="https://clonndev.starlightcommunity.net" />
+    <meta property="og:url" content="https://www.collin3dmodels.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#d35e56" />
     <link
@@ -55,7 +65,7 @@
       href="/css/custom.250201041739.css"
       id="customcss"
     />
-    <link rel="canonical" href="https://clonndev.starlightcommunity.net" />
+    <link rel="canonical" href="https://www.collin3dmodels.com" />
     <script>
       if (!webcard) var webcard={};webcard.id=1328317;webcard.moduleId=11109768;webcard.culture="en";webcard.type=2;webcard.isEdit=false;webcard.isPreview=true;webcard.isMobile=/Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent);webcard.isTouch='ontouchstart' in window || navigator.msMaxTouchPoints > 0;webcard.googleMapsEmbedApiKey='';webcard.googleMapsApiKey='';webcard.apiHost=location.host + '/api.php';var extraPath='';
     </script>
@@ -152,7 +162,9 @@
           <div class="inner">
             <div class="ed-element ed-icon social-icons-icon" id="ed-564173616">
               <a
-                href="https://www.youtube.com/@clonn."
+                href="https://www.youtube.com/@clonn."                
+                target="_blank"
+                title="My Youtube"
                 rel="nofollow"
                 ><svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -391,136 +403,6 @@
       id="ed-564173541"
       data-animation='{"type":"move-bottom-to-top","initial":"hide","keepHeight":true,"duration":"2.5s","delay":"0s","overlay":{"width":"auto"},"trigger":"scroll","group":{"name":"","behavior":{"show":"","hide":""}}}'
     >
-      <div class="inner" id="archive">
-        <div class="ed-element ed-headline custom-theme" id="ed-564173544">
-          <h2>Archive</h2>
-        </div>
-        <div class="ed-element ed-separator" id="ed-564173547">
-          <hr
-            class="bg-primary"
-            style="margin-left: 0px; margin-right: auto;"
-          />
-        </div>
-        <div class="ed-element ed-separator" id="ed-564173550">
-          <hr
-            class="bg-primary"
-            style="margin-left: 0px; margin-right: auto;"
-          />
-        </div>
-        <div
-          class="ed-element ed-collection-container preset-blog-pesk-blog wv-boxed wv-spacer"
-          id="ed-564173553"
-        >
-          <div
-            class="inner collection-loading"
-            data-collection-bind="%7B%22id%22%3A%22679d4fb701ad52396e3e4912%22%2C%22name%22%3A%22pesk%20blog%22%2C%22slug%22%3A%22pesk-blog%22%2C%22link%22%3A%7B%22type%22%3A%22self%22%2C%22href%22%3A%22https%3A//cms.sitehub.io/api/collections/679d4fb701ad52396e3e4912%22%7D%2C%22filter%22%3A%5B%7B%22key%22%3A%22columns.status%22%2C%22value%22%3A%22Published%22%7D%2C%7B%22key%22%3A%22columns.publishing_date%22%2C%22value%22%3A%22lte%3Anow%22%7D%5D%2C%22order%22%3A%22columns.publishing_date_DESC%22%2C%22filterByUrl%22%3Atrue%7D"
-            style="opacity:0"
-          >
-            <div
-              class="ed-element ed-collection-item blog-box"
-              id="ed-564173556"
-            >
-              <div class="inner">
-                <div class="ed-element ed-image" id="ed-564173559">
-                  <a href="/archive"
-                    ><img
-                      src="data:image/svg+xml,%3Csvg%20width='1024'%20viewBox='0%200%201024%20489.59999999999997'%20xmlns='http://www.w3.org/2000/svg'%3E%3Crect%20width='1024'%20height='489.59999999999997'%20style='fill:%20%23F7F7F7'%20/%3E%3C/svg%3E"
-                      alt=""
-                      style="object-fit: cover;"
-                      data-collection-bind="%7B%22type%22%3A%22file%22%2C%22field%22%3A%22image%22%2C%22link%22%3A%22page%22%7D"
-                      data-src="/images/1024/13764024/Screenshot2025-01-31at21-49-09Collin3DModels-3DModeler.png"
-                      class="ed-lazyload"
-                      srcset="
-                        data:image/svg+xml,%3Csvg%20width='1024'%20viewBox='0%200%201024%20489.59999999999997'%20xmlns='http://www.w3.org/2000/svg'%3E%3Crect%20width='1024'%20height='489.59999999999997'%20style='fill:%20%23F7F7F7'%20/%3E%3C/svg%3E 1w
-                      "
-                      data-srcset="/images/576/13764024/Screenshot2025-01-31at21-49-09Collin3DModels-3DModeler.png 576w, /images/976/13764024/Screenshot2025-01-31at21-49-09Collin3DModels-3DModeler.png 976w, /images/1024/13764024/Screenshot2025-01-31at21-49-09Collin3DModels-3DModeler.png 1024w"
-                  /></a>
-                </div>
-                <div class="ed-element ed-spacer" id="ed-564173562">
-                  <div style="height: 10px;" class="space"></div>
-                </div>
-                <div
-                  class="ed-element ed-headline post--headline"
-                  id="ed-564173565"
-                >
-                  <h2
-                    data-collection-bind="%7B%22type%22%3A%22text%22%2C%22field%22%3A%22name%22%2C%22link%22%3A%22page%22%7D"
-                  >
-                    <a href="/archive">Welcome!</a>
-                  </h2>
-                </div>
-                <div
-                  class="ed-element ed-headline post--category"
-                  id="ed-564173568"
-                >
-                  <h4
-                    data-collection-bind="%7B%22type%22%3A%22text%22%2C%22field%22%3A%22category%22%2C%22link%22%3A%22filter%22%7D"
-                  >
-                    <a href="#!filter[columns.category]=Category 1"
-                      >Category 1</a
-                    >
-                  </h4>
-                </div>
-                <div class="ed-element ed-text post--date" id="ed-564173571">
-                  <div
-                    data-collection-bind="%7B%22type%22%3A%22date%22%2C%22field%22%3A%22publishing_date%22%7D"
-                  >
-                    01/31/2025
-                  </div>
-                </div>
-                <div class="ed-element ed-spacer" id="ed-564173574">
-                  <div style="height: 10px;" class="space"></div>
-                </div>
-                <div class="ed-element ed-text" id="ed-564173577">
-                  <div
-                    data-collection-bind="%7B%22type%22%3A%22editor%22%2C%22field%22%3A%22description%22%7D"
-                  >
-                    <p>
-                      Hello, Welcome to the new site, I hope you enjoy your
-                      stay!
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div
-              class="ed-element ed-container flex-justify-content-space-between pagination columns-box hide"
-              style="flex-basis:100%;"
-              id="ed-564173580"
-            >
-              <div class="inner">
-                <div
-                  class="ed-element ed-button pagination-prev custom-theme"
-                  id="ed-564173583"
-                >
-                  <a
-                    class="button center bg-primary color-background bg-active-secondary color-active-background"
-                    href="#"
-                    rel="prev"
-                    ><i class="fa fa-angle-left"></i> Previous</a
-                  >
-                </div>
-                <div
-                  class="ed-element ed-button pagination-next custom-theme"
-                  id="ed-564173586"
-                >
-                  <a
-                    class="button center bg-primary color-background bg-active-secondary color-active-background"
-                    href="#"
-                    rel="next"
-                    >Next <i class="fa fa-angle-right"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div
-      class="ed-element ed-container wv-boxed wv-spacer preset-horizontal-form-v3-pesk"
-      id="ed-564240629"
-    >
       <div class="inner">
         <div class="ed-element ed-headline custom-theme" id="ed-564240632">
           <h2>Contact Me</h2>
@@ -618,32 +500,6 @@
                   >
                 </li>
               </ul>
-            </div>
-            <div class="ed-element ed-form-captcha" id="ed-564240662">
-              <div class="image">
-                <img
-                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAIwAAAAoCAYAAAAsTRLGAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAALElEQVR4nO3BAQEAAACCIP+vbkhAAQAAAAAAAAAAAAAAAAAAAAAAAAAAwK8BV6gAAdX6zPcAAAAASUVORK5CYII="
-                  alt=""
-                />
-              </div>
-              <div class="input">
-                <input
-                  placeholder="Captcha"
-                  required="required"
-                  type="text"
-                  name="form_564240641[ed-f-564240662][text]"
-                  value=""
-                  id="form_564240641_ed-f-564240662_text"
-                /><input
-                  type="hidden"
-                  name="form_564240641[ed-f-564240662][hash]"
-                  id="form_564240641_ed-f-564240662_hash"
-                  value="e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"
-                />
-              </div>
-              <div class="regenerate">
-                <a href="#" class="regenerate">Unreadable? Regenerate</a>
-              </div>
             </div>
             <input
               type="checkbox"
