Fixed borked form Theme

--- a/index.html
+++ b/index.html
@@ -398,125 +398,199 @@
       </div>
     </div>
     <div
-      class="ed-element ed-container wv-boxed wv-spacer animation-initial"
-      style="opacity: 1;"
-      id="ed-564173541"
-      data-animation='{"type":"move-bottom-to-top","initial":"hide","keepHeight":true,"duration":"2.5s","delay":"0s","overlay":{"width":"auto"},"trigger":"scroll","group":{"name":"","behavior":{"show":"","hide":""}}}'
-    >
-      <div class="inner">
-        <div class="ed-element ed-headline custom-theme" id="ed-564240632">
-          <h2>Contact Me</h2>
-        </div>
-        <div class="ed-element ed-separator" id="ed-564240635">
-          <hr
-            class="bg-primary"
-            style="margin-left: 0px; margin-right: auto;"
-          />
-        </div>
-        <div class="ed-element ed-separator" id="ed-564240638">
-          <hr
-            class="bg-primary"
-            style="margin-left: 0px; margin-right: auto;"
-          />
-        </div>
-        <div
-          class="ed-element ed-form-container horizontal-form"
-          id="ed-564240641"
+    class="ed-element ed-container flex-justify-content-space-between pagination columns-box hide"
+    style="flex-basis:100%;"
+    id="ed-564173580"
+  >
+    <div class="inner">
+      <div
+        class="ed-element ed-button pagination-prev custom-theme"
+        id="ed-564173583"
+      >
+        <a
+          class="button center bg-primary color-background bg-active-secondary color-active-background"
+          href="#"
+          rel="prev"
+          ><i class="fa fa-angle-left"></i> Previous</a
         >
-          <form method="POST" action="">
-            <div class="ed-element ed-form-input" id="ed-564240644">
-              <input
-                placeholder="Topic"
-                required="required"
-                type="text"
-                name="form_564240641[ed-f-564240644]"
-                value=""
-                id="form_564240641_ed-f-564240644"
-              />
-            </div>
-            <div class="ed-element ed-form-input" id="ed-564240647">
-              <input
-                placeholder="Username"
-                minlength="2"
-                maxlength="32"
-                type="text"
-                name="form_564240641[ed-f-564240647]"
-                value=""
-                id="form_564240641_ed-f-564240647"
-              />
-            </div>
-            <div class="ed-element ed-form-email" id="ed-564240650">
-              <input
-                placeholder="Email"
-                required="required"
-                type="email"
-                name="form_564240641[ed-f-564240650]"
-                value=""
-                id="form_564240641_ed-f-564240650"
-              />
-            </div>
-            <div
-              class="ed-element ed-form-input wv-overflow_visible"
-              id="ed-564240653"
-            >
-              <input
-                placeholder="Message"
-                required="required"
-                type="text"
-                name="form_564240641[ed-f-564240653]"
-                value=""
-                id="form_564240641_ed-f-564240653"
-              />
-            </div>
-            <div
-              class="ed-element ed-form-button custom-theme"
-              id="ed-564240656"
-            >
-              <button
-                class="bg-active-secondary bg-primary color-background color-active-background"
-                id="form_7247373_ed-f-7313073"
-                name="form_7247373[ed-f-7313073]"
-                type="submit"
-                value="Absenden"
-              >
-                Submit
-              </button>
-            </div>
-            <div class="ed-element ed-form-checkbox privacy" id="ed-564240659">
-              <ul class="checkbox_list">
-                <li>
-                  <input
-                    name="form_564240641[ed-f-564240659][]"
-                    type="checkbox"
-                    value="0"
-                    id="form_564240641_ed-f-564240659_0"
-                    required="required"
-                  />&nbsp;<label for="form_564240641_ed-f-564240659_0"
-                    ><p>
-                      <a href="/privacy" title=""
-                        >I have read and understand the privacy policy.</a
-                      >
-                    </p></label
-                  >
-                </li>
-              </ul>
-            </div>
-            <input
-              type="checkbox"
-              name="news"
-              checked="checked"
-              value="1"
-              style="display: none;"
-            /><input
-              type="checkbox"
-              name="tos"
-              value="1"
-              style="display: none;"
-            />
-          </form>
-        </div>
+      </div>
+      <div
+        class="ed-element ed-button pagination-next custom-theme"
+        id="ed-564173586"
+      >
+        <a
+          class="button center bg-primary color-background bg-active-secondary color-active-background"
+          href="#"
+          rel="next"
+          >Next <i class="fa fa-angle-right"></i
+        ></a>
       </div>
     </div>
+  </div>
+</div>
+</div>
+</div>
+</div>
+<div
+class="ed-element ed-container wv-boxed wv-spacer preset-horizontal-form-v3-pesk"
+id="ed-564240629"
+>
+    <div class="inner">
+      <div class="ed-element ed-headline custom-theme" id="ed-564240632">
+        <h2>Contact Me</h2>
+      </div>
+      <div class="ed-element ed-separator" id="ed-564240635">
+        <hr
+          class="bg-primary"
+          style="margin-left: 0px; margin-right: auto;"
+        />
+      </div>
+      <div class="ed-element ed-separator" id="ed-564240638">
+        <hr
+          class="bg-primary"
+          style="margin-left: 0px; margin-right: auto;"
+        />
+      </div>
+      <div
+        class="ed-element ed-form-container horizontal-form"
+        id="ed-564240641"
+      >
+        <form method="POST" action="">
+          <div class="ed-element ed-form-input" id="ed-564240644">
+            <input
+              placeholder="Topic"
+              required="required"
+              type="text"
+              name="form_564240641[ed-f-564240644]"
+              value=""
+              id="form_564240641_ed-f-564240644"
+            />
+          </div>
+          <div class="ed-element ed-form-input" id="ed-564240647">
+            <input
+              placeholder="Username"
+              minlength="2"
+              maxlength="32"
+              type="text"
+              name="form_564240641[ed-f-564240647]"
+              value=""
+              id="form_564240641_ed-f-564240647"
+            />
+          </div>
+          <div class="ed-element ed-form-email" id="ed-564240650">
+            <input
+              placeholder="Email"
+              required="required"
+              type="email"
+              name="form_564240641[ed-f-564240650]"
+              value=""
+              id="form_564240641_ed-f-564240650"
+            />
+          </div>
+          <div
+            class="ed-element ed-form-input wv-overflow_visible"
+            id="ed-564240653"
+          >
+            <input
+              placeholder="Message"
+              required="required"
+              type="text"
+              name="form_564240641[ed-f-564240653]"
+              value=""
+              id="form_564240641_ed-f-564240653"
+            />
+          </div>
+          <div
+            class="ed-element ed-form-button custom-theme"
+            id="ed-564240656"
+          >
+            <button
+              class="bg-active-secondary bg-primary color-background color-active-background"
+              id="form_7247373_ed-f-7313073"
+              name="form_7247373[ed-f-7313073]"
+              type="submit"
+              value="Absenden"
+            >
+              Submit
+            </button>
+          </div>
+          <div class="ed-element ed-form-checkbox privacy" id="ed-564240659">
+            <ul class="checkbox_list">
+              <li>
+                <input
+                  name="form_564240641[ed-f-564240659][]"
+                  type="checkbox"
+                  value="0"
+                  id="form_564240641_ed-f-564240659_0"
+                  required="required"
+                />&nbsp;<label for="form_564240641_ed-f-564240659_0"
+                  ><p>
+                    <a href="/privacy" title=""
+                      >I have read and understand the privacy policy.</a
+                    >
+                  </p></label
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="ed-element ed-form-captcha" id="ed-564240662">
+            <div class="image">
+              <img
+                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAIwAAAAoCAYAAAAsTRLGAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAALElEQVR4nO3BAQEAAACCIP+vbkhAAQAAAAAAAAAAAAAAAAAAAAAAAAAAwK8BV6gAAdX6zPcAAAAASUVORK5CYII="
+                alt=""
+              />
+            </div>
+            <div class="input">
+              <input
+                placeholder="Captcha"
+                required="required"
+                type="text"
+                name="form_564240641[ed-f-564240662][text]"
+                value=""
+                id="form_564240641_ed-f-564240662_text"
+              /><input
+                type="hidden"
+                name="form_564240641[ed-f-564240662][hash]"
+                id="form_564240641_ed-f-564240662_hash"
+                value="e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855"
+              />
+            </div>
+            <div class="regenerate">
+              <a href="#" class="regenerate">Unreadable? Regenerate</a>
+            </div>
+          </div>
+          <input
+            type="checkbox"
+            name="news"
+            checked="checked"
+            value="1"
+            style="display: none;"
+          /><input
+            type="checkbox"
+            name="tos"
+            value="1"
+            style="display: none;"
+          />
+        </form>
+      </div>
+    </div>
+  </div>
+          <input
+            type="checkbox"
+            name="news"
+            checked="checked"
+            value="1"
+            style="display: none;"
+          /><input
+            type="checkbox"
+            name="tos"
+            value="1"
+            style="display: none;"
+          />
+        </form>
+      </div>
+    </div>
+  </div>
     <div
       class="ed-element ed-icon back-to-top-button-icon preset-back-to-top-button-v3-pesk show"
       id="ed-564173622"
