Disabling the Contact fourm

--- a/index.html
+++ b/index.html
@@ -406,7 +406,8 @@
 class="ed-element ed-container wv-boxed wv-spacer preset-horizontal-form-v3-pesk"
 id="ed-564240629"
 >
-    <div class="inner">
+<!-- This is usless with out server siding the PHP :( -->
+<!--<div class="inner"> 
       <div class="ed-element ed-headline custom-theme" id="ed-564240632">
         <h2>Contact Me</h2>
       </div>
@@ -535,7 +536,7 @@ id="ed-564240629"
         </form>
       </div>
     </div>
-  </div>
+  </div>-->
     <div
       class="ed-element ed-icon back-to-top-button-icon preset-back-to-top-button-v3-pesk show"
       id="ed-564173622"
