Updated og:image and added banner
- Updated og:image to 152x152
- Add banner to remind you that this is a dev site

--- a/privacy.html
+++ b/privacy.html
@@ -4,13 +4,13 @@
     <title>Privacy - Collin 3D Models</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta property="og:image" content="/images/152/13761972/ClonnV2Image.png"/>
-    <meta property="og:image:width" content="2500"/>
-    <meta property="og:image:height" content="1330"/>
+    <meta property="og:image:width" content="152"/>
+    <meta property="og:image:height" content="152"/>
     <meta property="og:site_name" content="Collin 3D Models"/>
     <link rel="alternate" href="https://www.collin3dmodels.com" hreflang="x-default"/>
-    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="Privacy - Collin 3D Models"/>
-    <meta name="twitter:image" content="/images/32x32/13761971/ClonnV2Image.png"/>
+     <meta name="twitter:image" content="/images/152/13761971/ClonnV2Image.png"/>
     <meta property="og:title" content="Privacy - Collin 3D Models" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en" />
@@ -71,8 +71,16 @@
     />
     <style>
       #ed-564173601 img { width: 50px; height: auto; } #ed-564173601 { flex-basis: auto; text-align: center; } @media screen and (max-width: 975px) {  #ed-564173601 img { width: 150px; }} @media screen and (max-width: 575px) {  #ed-564173601 img { width: 80px; }} #ed-564173604 { flex-basis: auto; } #ed-564173607 { flex-grow: 1; flex-basis: auto; } #ed-564173607 > .inner { place-content: center flex-end; align-items: center; } @media screen and (max-width: 975px) {  #ed-564173607 { margin: auto; order: 2; flex-grow: 0; }} @media screen and (max-width: 975px) {  #ed-564173607 > .inner { justify-content: flex-end; }} @media screen and (max-width: 575px) {  #ed-564173607 { margin: auto; order: 2; flex-grow: 1; }} #ed-564173619 svg > * { stroke-width: 0px; } #ed-564173613 { flex-basis: auto; } #ed-564173613 > .inner { justify-content: flex-end; } @media screen and (max-width: 975px) {  #ed-564173613 { order: 1; flex-grow: 1; margin: 0px 1rem 0px 0px; }} @media screen and (max-width: 575px) {  #ed-564173613 { position: fixed; right: 0px; bottom: auto; top: 100px; margin: 0px 0rem 0px 0px; }} @media screen and (max-width: 575px) {  #ed-564173613 > .inner { flex-direction: column; }} #ed-564173808 > .inner { justify-content: space-between; align-items: center; } #ed-564173592 .space { height: 20px; } #ed-564173805 { border-width: 1px 0px 0px; border-style: solid; opacity: 1; margin: 0px 2rem; height: 160px; max-width: 2000px; } @media screen and (max-width: 975px) {  #ed-564173805 { margin: auto; }} @media screen and (max-width: 575px) {  #ed-564173805 { margin: auto; }}
+      .banner { background: #d35e56; display: flex; align-items: center; } .banner__content { padding: 16px; max-width: 1000px; margin: 0 auto; } .banner__text { flex-grow: 1; line-height: 1.4; font-family: "Quicksand", sans-serif; } .banner__text > span { color: #ffffff; }
     </style>
   </head>
+  <div class="banner">
+    <div class="banner__content">
+      <div class="banner__text">
+        <i><b><ins>This is a Staging Environment</i></b></ins>
+      </div>
+    </div>
+  </div>
   <body class="page-11109777 pagelayout-1 slogan culture-en">
     <div
       class="ed-element ed-reference ed-reference-container menu-wrapper wv-overflow_visible preset-menu-v2-pesk"
