--- a/404.html
+++ b/404.html
@@ -6,14 +6,14 @@
 
     <link rel="canonical" href="https://www.collin3dmodels.com/404"/>
     <meta property="og:image" content="/images/152/13761972/ClonnV2Image.png"/>
-    <meta property="og:image:width" content="2500"/>
-    <meta property="og:image:height" content="1330"/>
+    <meta property="og:image:width" content="152"/>
+    <meta property="og:image:height" content="152"/>
     <meta property="og:url" content="https://www.collin3dmodels.com"/>
     <meta property="og:site_name" content="Collin 3D Models"/>
     <link rel="alternate" href="https://www.collin3dmodels.com" hreflang="x-default"/>
-    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="404 - Collin 3D Models"/>
-    <meta name="twitter:image" content="/images/32x32/13761971/ClonnV2Image.png"/>
+    <meta name="twitter:image" content="/images/152/13761971/ClonnV2Image.png"/>
 
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -84,8 +84,16 @@
     />
     <style>
       @media screen and (max-width: 975px) {  #ed-564173868 > .background-image-holder:not(.ed-lazyload) { background-image: url("/images/976/13764061/screenshot_2023-11-11_06-22-26_2.png") !important; }} @media screen and (max-width: 975px) {  #null > .background-image-holder:not(.ed-lazyload) { background-image: url("/images/976/13764061/screenshot_2023-11-11_06-22-26_2.png") !important; }} @media screen and (max-width: 575px) {  #null > .background-image-holder:not(.ed-lazyload) { background-image: url("/images/576/13764061/screenshot_2023-11-11_06-22-26_2.png") !important; }} @media screen and (max-width: 575px) {  #ed-564173868 > .background-image-holder:not(.ed-lazyload) { background-image: url("/images/576/13764061/screenshot_2023-11-11_06-22-26_2.png") !important; }} #ed-564173874 h1 { text-align: center; } #ed-564173874 { padding: 15px; position: sticky; } #ed-564173880 { margin: auto; padding: 10px; position: sticky; } #ed-564173880 h1 { text-align: center; } #ed-564173883 { padding: 15px; position: sticky; } #ed-564173871 { max-width: 100%; height: 100%; } #ed-564173865 > .inner { justify-content: center; padding: 18%; } #ed-564173865 { margin: auto; transform: translate3d(0px, 0px, 0px) scale(1) rotate(0deg) skew(0deg); position: sticky; }
+      .banner { background: #d35e56; display: flex; align-items: center; } .banner__content { padding: 16px; max-width: 1000px; margin: 0 auto; } .banner__text { flex-grow: 1; line-height: 1.4; font-family: "Quicksand", sans-serif; } .banner__text > span { color: #ffffff; }
     </style>
   </head>
+  <div class="banner">
+    <div class="banner__content">
+      <div class="banner__text">
+        <i><b><ins>This is a Staging Environment</i></b></ins>
+      </div>
+    </div>
+  </div>
   <body class="page-11109783 pagelayout-1 slogan culture-en">
     <div
       class="ed-element ed-container full-width wv-boxed wv-spacer"
