readded banner and added missing link for banner

--- a/404.html
+++ b/404.html
@@ -84,8 +84,16 @@
     />
     <style>
       @media screen and (max-width: 975px) {  #ed-564173868 > .background-image-holder:not(.ed-lazyload) { background-image: url("/images/976/13764061/screenshot_2023-11-11_06-22-26_2.png") !important; }} @media screen and (max-width: 975px) {  #null > .background-image-holder:not(.ed-lazyload) { background-image: url("/images/976/13764061/screenshot_2023-11-11_06-22-26_2.png") !important; }} @media screen and (max-width: 575px) {  #null > .background-image-holder:not(.ed-lazyload) { background-image: url("/images/576/13764061/screenshot_2023-11-11_06-22-26_2.png") !important; }} @media screen and (max-width: 575px) {  #ed-564173868 > .background-image-holder:not(.ed-lazyload) { background-image: url("/images/576/13764061/screenshot_2023-11-11_06-22-26_2.png") !important; }} #ed-564173874 h1 { text-align: center; } #ed-564173874 { padding: 15px; position: sticky; } #ed-564173880 { margin: auto; padding: 10px; position: sticky; } #ed-564173880 h1 { text-align: center; } #ed-564173883 { padding: 15px; position: sticky; } #ed-564173871 { max-width: 100%; height: 100%; } #ed-564173865 > .inner { justify-content: center; padding: 18%; } #ed-564173865 { margin: auto; transform: translate3d(0px, 0px, 0px) scale(1) rotate(0deg) skew(0deg); position: sticky; }
+     .banner { background: #d35e56; display: flex; align-items: center; } .banner__content { padding: 16px; max-width: 1000px; margin: 0 auto; } .banner__text { flex-grow: 1; line-height: 1.4; font-family: "Quicksand", sans-serif; } .banner__text > span { color: #ffffff; }
     </style>
   </head>
+  <div class="banner">
+    <div class="banner__content">
+      <div class="banner__text">
+        <i><b><ins>This is a Staging Environment</i></b></ins>
+      </div>
+    </div>
+  </div>
   <body class="page-11109783 pagelayout-1 slogan culture-en">
     <div
       class="ed-element ed-container full-width wv-boxed wv-spacer"
