--- a/404.html
+++ b/404.html
@@ -89,8 +89,9 @@
   </head>
   <div class="banner">
     <div class="banner__content">
-      <div class="banner__text">
-        <i><b><ins>This is a Staging Environment</i></b></ins>
+      <a href="https://wpengine.com/resources/what-is-a-staging-site-why-have-one/" target="_blank" style="text-decoration: none; color: inherit;">
+        <div class="banner__text">
+          <i><b><ins>This is a Staging Environment</i></b></ins>
       </div>
     </div>
   </div>
